k8s/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  type: ClusterIP
  selector:
    app: node-app
    version: blue
  ports:
  - port: 3000
    targetPort: 3000
