k8s/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  type: NodePort
  selector:
    app: node-app
    version: green
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
