k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: node-app.local   # Specific host rule
    http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 3000    # This port number should match the targetPort in the blue-service.yaml, and the content from port 80 or 443 from browser forwared to this port.
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 3000    # This port number should match the targetPort in the green-service.yaml, and the content from port 80 or 443 from browser forwared to this port.
      - path: /           # Default path
        pathType: Exact
        backend:
          service:
            name: blue-service
            port:
              number: 3000
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 3000
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 3000
      - path: /          # Default path
        pathType: Exact
        backend:
          service:
            name: blue-service
            port:
              number: 3000
